--- a/.env_local
+++ b/.env_local
@@ -13,7 +13,7 @@ DB_PORT=5432
 DB_SCHEMA=lbaw23132
 DB_DATABASE=lbaw23132
 DB_USERNAME=lbaw23132
-DB_PASSWORD=tAmWyvvh
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
